# python-lib

./: .gitignore  CMakeLists.txt  README.MD  build.py
install/include/python3.13/: pyconfig.h
install/lib/pkgconfig/: python-3.13-embed.pc  python-3.13.pc
install/lib/python3.13/: _sysconfigdata__darwin_darwin.py
install/lib/python3.13/config-3.13-darwin/: Makefile  Setup.stdlib  python-config.py
